--- a/css/tablet.css
+++ b/css/tablet.css
@@ -136,3 +136,23 @@ footer .flex-container .flex-right .item5 img {
 	width: 100px;
 	height: auto;
 }
+
+@media(max-width: 770px) {
+	#how-we-work .card {
+		width: 300px;
+	}
+
+	#how-we-work .card .card-container {
+		position: absolute;
+		display: flex;
+		height: 200px;
+		max-width: 300px;
+		z-index: 2;
+	}
+
+	#how-we-work .card .card-container ul li:last-of-type {
+		font-size: 20px;
+		font-weight: 600;
+		width: 150px;
+	}
+}
